# Object_Detection_sim_in_Gazebo

./: .gitignore  README.md  collect_data.sh  run.sh  run_manual.sh  setup_repos.sh
datasets/: custom_shapes.yaml  visdrone.yaml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/drone_yolo_detection/lib/drone_yolo_detection/: data_collector  detection_visualizer  flight_controller  yolo_detector
install/drone_yolo_detection/share/drone_yolo_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_yolo_detection/share/drone_yolo_detection/launch/: data_collection.launch.py  drone_detection.launch.py  drone_manual.launch.py
install/drone_yolo_detection/share/drone_yolo_detection/worlds/: data_collection.sdf  drone_detection.sdf
log/: latest_build
ros2_ws/src/drone_yolo_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_yolo_detection/drone_yolo_detection/: data_collector.py  detection_visualizer.py  flight_controller.py  yolo_detector.py
ros2_ws/src/drone_yolo_detection/launch/: data_collection.launch.py  drone_detection.launch.py  drone_manual.launch.py
ros2_ws/src/drone_yolo_detection/materials/: generate_grass.py
ros2_ws/src/drone_yolo_detection/worlds/: data_collection.sdf  drone_detection.sdf
training/: convert_visdrone.py  run_training.sh  train.py  train_custom.py
